--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 @theme {
   --font-sans: var(--font-poppins);
-  --font-heading: var(--font-cinzel);
+  --font-heading: var(--font-geist);
 
 }
 
@@ -14,7 +14,7 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-poppins);
-   --font-heading: var(--font-cinzel);
+  --font-heading: var(--font-geist);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -124,7 +124,6 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
     @apply border-border outline-ring/50;
   }
   body {
